--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@flashbots/ethers-provider-bundle": "^1.0.0",
     "@openzeppelin/contracts": "^5.0.2",
     "@uniswap/v2-sdk": "^4.4.1",
     "git": "^0.1.5",
